--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-I wrote this in C its an ongoing excersise to inprove my skills in the language
+I wrote this in C its an ongoing excersise that lune gave me to inprove my skills in the language
